# testing_apis

./: .gitignore  README.md  init_db.py  pyproject.toml  test_websocket.py
GraphQL/: __init__.py  context.py  main.py  schema.py
GraphQL/gql_types/: comment.py  common.py  project.py  task.py  user.py
GraphQL/mutations/: auth.py  comment.py  project.py  task.py  user.py
GraphQL/queries/: comment.py  project.py  task.py  user.py
REST/: __init__.py  main.py
REST/routers/: __init__.py  auth.py  comments.py  projects.py  tasks.py  users.py
shared/: __init__.py  auth.py  database.py  dependencies.py  models.py  schemas.py
shared/services/: __init__.py  comment_service.py  project_service.py  task_service.py  user_service.py
websokets/: __init__.py  connection_manager.py  main.py  message_handler.py
