[project]
name = "task-management-apis"
version = "1.0.0"
description = "Task Management system with REST, GraphQL, and WebSocket APIs"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and server
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",

    # Database
    "sqlalchemy>=2.0.23",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic[email]>=2.5.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",

    # HTTP client for testing
    "httpx>=0.25.2",
    "requests>=2.31.0",

    # GraphQL (for graphql_api)
    "strawberry-graphql[fastapi]>=0.215.1",

    # WebSocket client (for testing)
    "websockets>=12.0",

    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",

    # Interactive CLI
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
]